@@ -30,13 +30,14 @@ def stars(n):
     return ("★"*n) + ("☆"*(5-n))
 
 
-def export_html(repo: Repository, dstfile, with_notes=False, with_summary=False):
+def export_html(repo: Repository, dstfile, with_notes=False, with_summary=False, n=-1):
     mydir = os.path.dirname(__file__)
     header = open(os.path.join(mydir, "../html/header.html"), "r").read()
     footer = open(os.path.join(mydir, "../html/footer.html"), "r").read()
     with open(dstfile, "w") as f:
         print(header, file=f)
         print('<table class="table">', file=f)
+        cnt = 0
         for p in reversed(repo.list()):
             include = not(with_notes or with_summary)
             if with_summary:
@@ -44,8 +45,11 @@ def export_html(repo: Repository, dstfile, with_notes=False, with_summary=False)
             if with_notes:
                 include = include or p.has_notes()
             if include:
+                cnt += 1
+                if n != -1 and cnt > n:
+                    break
                 print(
-                    "<thead class='thead-dark'><tr><th>{}</th></tr></thead>"  # title
+                    "\n<thead class='thead-dark'><tr><th>{}</th></tr></thead>"  # title
                     "<tr><td>{}&nbsp;&nbsp;&nbsp;<a href='{}'>extern link</a></td></tr>"  # url
                     "{}"  # abstract
                     "{}"  # summary
