@@ -4,6 +4,7 @@
 - feature: specify more than one url for fetching
 - feature: specify tags when fetching a paper
 - feature: export to HTML from ui (markdown is converted to HTML)
+- feature: option to filter the export
 - feature: command line argument "export" to export the database into an HTML file
 - markdown (.tmp -> .tmp.md)
 - bugfix: less is confused when showing lines with escape sequences having as many chadc racters as the terminal size
